--- a/ansible.cfg
+++ b/ansible.cfg
@@ -64,8 +64,8 @@
 #stdout_callback = skippy
 # enable additional callbacks
 #callback_whitelist = timer, mail
-callback_plugins   = ./callback_plugins
-callback_whitelist = mail_reporter
+# callback_plugins   = ./callback_plugins
+# callback_whitelist = mail_reporter
 
 # Determine whether includes in tasks and handlers are "static" by
 # default. As of 2.0, includes are dynamic by default. Setting these
