correct snippet path

--- a/roles/vim/tasks/main.yml
+++ b/roles/vim/tasks/main.yml
@@ -125,7 +125,7 @@
 - name: transfer vim snippets
   copy:
     src: "{{ item }}"
-    dest: "/etc/vim/{{ item }}"
+    dest: "/etc/vim/"
   become: true
   with_items:
     - snipps
